--- a/GPT2_LM_FR_allocine.ipynb
+++ b/GPT2_LM_FR_allocine.ipynb
@@ -6,8 +6,9 @@
       "name": "GPT2_LM_FR_allocine.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "mount_file_id": "1yJswghiMf5LHUKaiQWylHqkhS-tplN30",
-      "authorship_tag": "ABX9TyOjEiIk11tq3qLHxoePNFhY",
+      "authorship_tag": "ABX9TyNw6ptLFVugRRIvK1Djqjw0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2197,7 +2198,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 131
+          "height": 165
         },
         "id": "rbTDvZKfAQtd",
         "outputId": "302d0920-1cb5-4f42-bf26-e641b79d781e"
@@ -2265,7 +2266,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 114
+          "height": 131
         },
         "id": "GokRVQ2TSxNw",
         "outputId": "a07315ca-94e6-49a1-be30-851209e327e9"
@@ -2377,7 +2378,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 213
+          "height": 281
         },
         "id": "k2IJzb9_Ymz_",
         "outputId": "8405f3bd-23be-444e-e6c8-5f8ecdb1d3d7"
@@ -2453,7 +2454,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 196
+          "height": 247
         },
         "id": "s-oNsGaHXwgm",
         "outputId": "e03ef2c0-9841-4319-8441-73fb770a38fd"
@@ -2576,8 +2577,8 @@
         "tokens_ids = tokenizer_fastai_fr.encodes(text)\n",
         "tokens = tokenizer_fastai_fr.tokenizer.convert_ids_to_tokens(tokens_ids)\n",
         "\n",
-        "print('input text:',TitledStr(text))\n",
-        "print('text tokens:',TitledStr(tokens))\n",
+        "print('input text:',TitledStr(text)) \n",
+        "print('text tokens:',TitledStr(tokens)) \n",
         "print('text tokens_ids:',TitledStr(tokens_ids))\n",
         "print('output text:',TitledStr(tokenizer_fastai_fr.decodes(tokens_ids)))"
       ],
@@ -2608,7 +2609,7 @@
         "# getting the vocab\n",
         "tokenizer_fastai_vocab_fr = tokenizer_fastai_fr.tokenizer.get_vocab() #dict\n",
         "# making a vocab list from the vocab dictionary\n",
-        "tokenizer_fastai_vocab_ls_fr = [k for k, v in sorted(tokenizer_fastai_vocab_fr.items(), key=lambda item: item[1])]\n",
+        "tokenizer_fastai_vocab_ls_fr = [k for k, v in sorted(tokenizer_fastai_vocab_fr.items(), key=lambda item: item[1])] #list\n",
         "len(tokenizer_fastai_vocab_ls_fr),tokenizer_fastai_vocab_ls_fr[:10]"
       ],
       "execution_count": 31,
@@ -2757,7 +2758,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 383
+          "height": 502
         },
         "id": "aN8MZJK4aimy",
         "outputId": "5ae4af06-62ab-4632-9e0d-8b0d5934bd30"
@@ -3091,7 +3092,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 400
+          "height": 502
         },
         "id": "k1LfAUfEbGPY",
         "outputId": "3143e783-2b7e-4d8e-8cec-6bf054071980"
@@ -5103,7 +5104,7 @@
         "id": "wDMxsahDOqtk",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 114
+          "height": 131
         },
         "outputId": "91604032-16e7-42ed-e2a2-bf8536cc6cb8"
       },
@@ -5416,7 +5417,9 @@
       },
       "source": [
         "# Reading\n",
-        "[Openai Better Language Models](https://openai.com/blog/better-language-models/)"
+        "- [Attention is all you need](https://arxiv.org/abs/1706.03762)\n",
+        "- [The illustrated transformer](https://jalammar.github.io/illustrated-transformer/)\n",
+        "-[Openai Better Language Models](https://openai.com/blog/better-language-models/)"
       ]
     },
     {
