--- a/TEST_Camembert_LM&TextClassification.ipynb
+++ b/TEST_Camembert_LM&TextClassification.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1LNTR3ennJhVPkRkuADWqthbQMYiC8sGK",
-      "authorship_tag": "ABX9TyN5oc643oo1r382/TSRsk/4",
+      "authorship_tag": "ABX9TyM6tI/KRdDYQ8gzLDbNENA3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4376,7 +4376,6 @@
         "        blocks=(TextBlock.from_df('review', is_lm=False, vocab=vocab_lm), CategoryBlock),\n",
         "        get_y=ColReader('polarity'), \n",
         "        get_x=ColReader('text'), # res_col_name should be \"text\"\n",
-        "        \n",
         "        splitter=RandomSplitter()\n",
         ").dataloaders(train_df, bs=16, seq_len=512)"
       ],
@@ -4493,25 +4492,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Jv3zC_I-_HAz",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "abb66fcd-97e7-440b-8dcf-e511abe5d94e"
+        "id": "Jv3zC_I-_HAz"
       },
       "source": [
         "print(len(dls_clas.train), len(dls_clas.valid))"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "500 125\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4596,7 +4583,7 @@
         "id": "_QBaKmV3TxJJ"
       },
       "source": [
-        "from transformers import CamembertModel, CamembertConfig, CamembertForSequenceClassification"
+        "from transformers import CamembertConfig, CamembertForSequenceClassification"
       ],
       "execution_count": 72,
       "outputs": []
@@ -4639,18 +4626,6 @@
           "name": "stderr"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "14KItF3rUsmn"
-      },
-      "source": [
-        "# model = CamembertForSequenceClassification.from_pretrained(\"camembert-base\", return_dict=True)\n",
-        "# #model = BertForSequenceClassification.from_pretrained('bert-base-uncased', return_dict=True)"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
