--- a/GPT2_FR_TextClassification_allocine.ipynb
+++ b/GPT2_FR_TextClassification_allocine.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1yJswghiMf5LHUKaiQWylHqkhS-tplN30",
-      "authorship_tag": "ABX9TyMuq52gEXmIoO7fjMzHD9lt",
+      "authorship_tag": "ABX9TyNsBtxkdpUUsnk9pSPKxV9E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1551,7 +1551,7 @@
       "source": [
         "# !nvidia-smi"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1566,7 +1566,7 @@
       "source": [
         "! [ -e /content ] && pip install -Uqq fastai  # upgrade fastai on colab"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1592,7 +1592,7 @@
         "!pip install -Uq transformers\n",
         "from fastai.text.all import *"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1629,7 +1629,7 @@
       "source": [
         "from transformers import GPT2Tokenizer, GPT2ForSequenceClassification, GPT2Config"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1644,7 +1644,7 @@
         "\n",
         "lr = 2e-5"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1714,7 +1714,7 @@
         "tokenizer.model_max_len = 512\n",
         "model = GPT2ForSequenceClassification.from_pretrained(model_name)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1879,7 +1879,7 @@
       "source": [
         "model.config"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1946,7 +1946,7 @@
         "path = Path('/content/allocine/')\n",
         "path.mkdir(parents=True, exist_ok=True)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1959,7 +1959,7 @@
         "path = Path('/content/allocine/models')\n",
         "path.mkdir(parents=True, exist_ok=True)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1974,7 +1974,7 @@
       "source": [
         "path = Path('/content/allocine/'); path"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2000,7 +2000,7 @@
         "!wget -q https://github.com/TheophileBlard/french-sentiment-analysis-with-bert/raw/master/allocine_dataset/data.tar.bz2\n",
         "!tar -xf /content/data.tar.bz2 -C '/content/allocine'"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2017,7 +2017,7 @@
         "train_df = pd.read_json(path/'data/train.jsonl', lines=True, nrows=10000)\n",
         "train_df.head(1)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2085,7 +2085,7 @@
         "train_df.to_csv(path/'data/train.csv', encoding = 'utf-8', header = True, index = False)\n",
         "train_df.head(2)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2155,7 +2155,7 @@
         "# # splitting a df by rows\n",
         "# df_train = df.iloc[10001:-1]; len(df_train)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2179,7 +2179,7 @@
       "source": [
         "tokenizer.vocab_size"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2207,7 +2207,7 @@
       "source": [
         "tokenizer.pad"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2236,7 +2236,7 @@
         "print(tokenizer.eos_token)\n",
         "print(tokenizer.bos_token)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2261,7 +2261,7 @@
         "        return TensorText(self.tokenizer.convert_tokens_to_ids(toks))\n",
         "    def decodes(self, x): return TitledStr(self.tokenizer.decode(x.cpu().numpy()))\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2285,7 +2285,7 @@
         "print('text tokens_ids:',TitledStr(tokens_ids))\n",
         "print('output text:',TitledStr(tokenizer_fastai_fr.decodes(tokens_ids)))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2320,7 +2320,7 @@
       "source": [
         "bs"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2344,7 +2344,7 @@
       "source": [
         "# bs,sl = 8, 256"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2364,7 +2364,7 @@
         "                                dls_kwargs={'before_batch':Pad_Chunk(pad_idx = tokenizer.pad_token_id, pad_first=(tokenizer.padding_side=='left'))})\n",
         "        "
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2381,7 +2381,7 @@
         "\n",
         ").dataloaders(train_df, bs=4)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2392,7 +2392,7 @@
       "source": [
         "# xb,yb=dls_clas.one_batch()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2423,7 +2423,7 @@
       "source": [
         "dls_clas.show_batch(max=3)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2483,7 +2483,7 @@
       "source": [
         "print(len(dls_clas.train), len(dls_clas.valid))"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2506,7 +2506,7 @@
       "source": [
         "dls_clas.c, dls_clas.vocab"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2543,7 +2543,7 @@
         "# import gc\n",
         "# gc.collect()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2565,7 +2565,7 @@
         "    groups = L(model.base_model.children()) + L(m for m in list(model.children())[1:] if params(m))\n",
         "    return groups.map(params)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2577,7 +2577,7 @@
         "class DropOutput(Callback):\n",
         "    def after_pred(self): self.learn.pred = self.pred[0]"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2591,9 +2591,9 @@
       },
       "source": [
         "model = GPT2ForSequenceClassification.from_pretrained(model_name, pad_token_id=tokenizer.pad_token_id)\n",
-        "learn = Learner(dls_clas, model, loss_func=CrossEntropyLossFlat(), cbs=[DropOutput], metrics=accuracy).to_fp16() "
+        "learn = Learner(dls_clas, model, loss_func=CrossEntropyLossFlat(), splitter=default_splitter, cbs=[DropOutput], metrics=accuracy).to_fp16() "
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2620,7 +2620,7 @@
       "source": [
         "learn.model"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2834,7 +2834,7 @@
       "source": [
         "# learn.lr_find()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2850,7 +2850,7 @@
       "source": [
         "learn.fit_one_cycle(1, lr)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2908,10 +2908,9 @@
       },
       "source": [
         "# amr predicting sentiment analysis\n",
-        "learn.predict(\"Ce film est vraiment marrant\")\n",
-        "#learn.predict(\"Ce film est un navet\")"
+        "learn.predict(\"Ce film est vraiment marrant\")"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2953,10 +2952,9 @@
       },
       "source": [
         "# amr predicting sentiment analysis\n",
-        "#learn.predict(\"Ce film est vraiment marrant\")\n",
         "learn.predict(\"Ce film est un navet\")"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2999,7 +2997,7 @@
       "source": [
         "learn.show_results()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3069,17 +3067,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dl7AsyNuvdgR"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 39,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "Ad617AZxBcbw",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3092,7 +3079,7 @@
         "#interp = Interpretation.from_learner(learn)\n",
         "interp = ClassificationInterpretation.from_learner(learn)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3123,7 +3110,7 @@
       "source": [
         "interp.plot_confusion_matrix()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3153,7 +3140,7 @@
       "source": [
         "interp.plot_top_losses(9, figsize=(15,11))"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3263,11 +3250,10 @@
       },
       "source": [
         "## NOTE\n",
-        "https://github.com/huggingface/transformers/issues/2001\n",
-        "\n",
-        "GPT2 has no padding token, as it was trained on documents and not sentences.\n",
+        "GPT2 has no padding token, as it was trained on documents and not on sentences.\n",
         "In order to use GPT2 with variable length inputs, we can apply padding with an arbitrary token and ensure that those tokens are not used by the model with an attention_mask.\n",
-        "As for the labels, we should replace only on the labels variable the padded token ids with -1."
+        "\n",
+        "https://github.com/huggingface/transformers/issues/2001"
       ]
     },
     {
@@ -3278,7 +3264,7 @@
       "source": [
         ""
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     }
   ]
