--- a/Camembert_LM&TextClassification.ipynb
+++ b/Camembert_LM&TextClassification.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1LNTR3ennJhVPkRkuADWqthbQMYiC8sGK",
-      "authorship_tag": "ABX9TyOcMzb8zoIdUWiLAWVbSrlg",
+      "authorship_tag": "ABX9TyPtgCc9v542RKajiKV3aA5L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6060,7 +6060,9 @@
         "\n",
         "[Wu Dao 2.0: A Monster of 1.75 Trillion Parameters](https://towardsdatascience.com/gpt-3-scared-you-meet-wu-dao-2-0-a-monster-of-1-75-trillion-parameters-832cd83db484)\n",
         "\n",
-        "[Transfer Learning](https://youtu.be/BqqfQnyjmgg)"
+        "[Transfer Learning](https://youtu.be/BqqfQnyjmgg)\n",
+        "\n",
+        "[Language Processing With BERT](https://www.youtube.com/watch?v=ioGry-89gqE)"
       ]
     },
     {
