--- a/Camembert_LM&TextClassification.ipynb
+++ b/Camembert_LM&TextClassification.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "toc_visible": true,
       "mount_file_id": "1LNTR3ennJhVPkRkuADWqthbQMYiC8sGK",
-      "authorship_tag": "ABX9TyPtgCc9v542RKajiKV3aA5L",
+      "authorship_tag": "ABX9TyNo/Xe9wlUCiIsohe2n98wO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6055,14 +6055,18 @@
       },
       "source": [
         "# Additional Resources\n",
+        "[Language Processing With BERT](https://www.youtube.com/watch?v=ioGry-89gqE)\n",
+        "\n",
+        "[The Illustrated BERT, ELMo, and co. (How NLP Cracked Transfer Learning](http://jalammar.github.io/illustrated-bert/)\n",
+        "\n",
+        "[Transfer Learning](https://youtu.be/BqqfQnyjmgg)\n",
         "\n",
         "[SMART: Robust and Efficient Fine-Tuning for Pre-trained Natural Language Models through Principled Regularized Optimization](https://arxiv.org/abs/1911.03437)\n",
         "\n",
         "[Wu Dao 2.0: A Monster of 1.75 Trillion Parameters](https://towardsdatascience.com/gpt-3-scared-you-meet-wu-dao-2-0-a-monster-of-1-75-trillion-parameters-832cd83db484)\n",
         "\n",
-        "[Transfer Learning](https://youtu.be/BqqfQnyjmgg)\n",
         "\n",
-        "[Language Processing With BERT](https://www.youtube.com/watch?v=ioGry-89gqE)"
+        "\n"
       ]
     },
     {
