--- a/01_Computer_Vision_regex.ipynb
+++ b/01_Computer_Vision_regex.ipynb
@@ -7,6 +7,7 @@
       "name": "01_Computer_Vision-regex.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "jupytext": {
@@ -1195,7 +1196,7 @@
       },
       "source": [
         "model_path = Path(\"/content/Pets/models\")\n",
-        "path.mkdir(parents=True, exist_ok=True)"
+        "model_path.mkdir(parents=True, exist_ok=True)"
       ],
       "execution_count": 51,
       "outputs": []
