--- a/12_resnet.ipynb
+++ b/12_resnet.ipynb
@@ -6,7 +6,10 @@
     "colab": {
       "name": "12_resnet.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "c9kO2_qYYn8R"
+      ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "jupytext": {
@@ -562,7 +565,7 @@
         "# amr computing the output feature map\n",
         "# the formula (n + 2*pad - ks)//stride + 1\n",
         "# example with an image size 128x128 pixels, ks=3, pad=1, stride=1\n",
-        "(128 + 2*1 - 3)//2+1"
+        "(128 + 2*1 - 3)//2 + 1"
       ],
       "execution_count": null,
       "outputs": [
@@ -743,6 +746,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "WJvOJkmw5prE"
+      },
+      "source": [
+        "NOTE: the learner holds a dataloader, a model, a loss function, a metric, the optimizer by default is Adam."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "POY-TY6zrrQL"
       },
       "source": [
@@ -908,16 +920,7 @@
         "id": "1jAZsk5DlnCG"
       },
       "source": [
-        "NOTE: `learn.summary` The first conv is conv(3,16), by default the “kernel” size is 3x3, so to know the number of parameters, you just multiply all of these numbers as follows: `3*16*3*3=432`. "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WJvOJkmw5prE"
-      },
-      "source": [
-        "NOTE: the learner holds a dataloader, a model, a loss function, a metric, the optimizer is Adam."
+        "NOTE: `learn.summary` The first conv is `conv(3,16)`, by default the “kernel” size is 3x3, so to know the number of parameters, you just multiply all of these numbers as follows: `3*16*3*3=432`. "
       ]
     },
     {
@@ -1149,7 +1152,7 @@
         "id": "Gn0xHzLJ-nAJ"
       },
       "source": [
-        "NOTE: **Issue: 56-layer net has higher training error and test error than the 20-layer net**."
+        "NOTE: **Issue: The 56-layer model has a worse training and testing error compared to the 20-layer model**"
       ]
     },
     {
@@ -1259,7 +1262,7 @@
         "id": "xR_VW0CeFreF"
       },
       "source": [
-        "NOTE:  **There are two problems with this, however: it can't handle a stride other than 1, and it requires that `ni==nf`. Stop for a moment to think carefully about why this is**.\n",
+        "NOTE:  **Issue with the ResNet block, cannot apply a stride > 1 and it requires that ni==nf. Indeed, if a stride = 2, the grid size of the output activation will be half the size and therefore we can add back to x in forward because x and the output have different shapes**.\n",
         "\n",
         "The issue is that with a stride of, say, 2 on one of the convolutions, the grid size of the output activations will be half the size on each axis of the input. So then we can't add that back to `x` in `forward` because `x` and the output activations have different dimensions. The same basic issue occurs if `ni!=nf`: the shapes of the input and output connections won't allow us to add them together.\n",
         "\n",
@@ -1335,6 +1338,15 @@
           "metadata": {},
           "execution_count": 28
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jCXMhIcLVyI5"
+      },
+      "source": [
+        "NOTE: the first conv has stride 2, and the next conv has a stride of 1 and no ReLu."
       ]
     },
     {
@@ -2818,7 +2830,7 @@
         "id": "j2KB3JyeFreL"
       },
       "source": [
-        "Instead of staking two convolutions with a kernel size of 3, bottlenecks layers use 3 convolutions:\n",
+        "Instead of stacking two convolutions with a kernel size of 3, bottlenecks layers use 3 convolutions:\n",
         "\n",
         "- two 1x1 (at the beginning and the end) and\n",
         "- one 3x3 as showns on the right figure below.\n",
@@ -2843,7 +2855,7 @@
         "id": "IKIBmkxhFreM"
       },
       "source": [
-        "Why is that useful? 1×1 convolutions are much faster, so even if this seems to be a more complex design, this block executes faster than the first ResNet block we saw. This then lets us use more filters: as we see in the illustration, the number of filters in and out is 4 times higher (256 instead of 64) diminish then restore the number of channels (hence the name bottleneck). The overall impact is that we can use more filters in the same amount of time.\n",
+        "Why is that useful? 1×1 convolutions are much faster, so even if this seems to be a more complex design, this block executes faster than the first ResNet block we saw. **This then lets us use more filters: as we see in the illustration, the number of filters in and out is 4 times higher (256 instead of 64) diminish then restore the number of channels (hence the name bottleneck)**. The overall impact is that we can use more filters in the same amount of time.\n",
         "\n",
         "Let's try replacing our `ResBlock` with this bottleneck design:"
       ]
@@ -2863,6 +2875,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G06QdeRIbQDE"
+      },
+      "source": [
+        "NOTE: the number of filters are diminished for the the two ConvLayer (`nf//4`) and then restore at the last Convlayer(`nf`)"
+      ]
     },
     {
       "cell_type": "code",
@@ -2911,7 +2932,7 @@
         "id": "Frpl7KkTFreM"
       },
       "source": [
-        "We'll use this to create a ResNet-50 with group sizes of `(3,4,6,3)`. We now need to pass `4` in to the `expansion` parameter of `ResNet`, since we need to start with four times less channels and we'll end with four times more channels.\n",
+        "**We'll use this to create a ResNet-50 with group sizes of `(3,4,6,3)`. We now need to pass `4` in to the `expansion` parameter of `ResNet`, since we need to start with four times less channels and we'll end with four times more channels**.\n",
         "\n",
         "Deeper networks like this don't generally show improvements when training for only 5 epochs, so we'll bump it up to 20 epochs this time to make the most of our bigger model. And to really get great results, let's use bigger images too:"
       ]
@@ -2927,6 +2948,7 @@
         "outputId": "70603ee8-efc3-4b71-8d9f-5d5ea01e91f3"
       },
       "source": [
+        "# using a bigger image size 224 px\n",
         "dls = get_data(URLs.IMAGENETTE_320, presize=320, resize=224)"
       ],
       "execution_count": null,
@@ -2977,6 +2999,7 @@
         "id": "2TN9qMtWFreN"
       },
       "source": [
+        "# ResNet50\n",
         "rn = ResNet(dls.c, [3,4,6,3], 4)"
       ],
       "execution_count": null,
@@ -4100,7 +4123,7 @@
         "1. What is \"adaptive pooling\"?\n",
         "> In average pooling you set the ks and the stride yourself. In adaptive average pooling you specify the output. The ks and stride are auto detected. It's less work for you. https://stackoverflow.com/questions/58692476/what-is-adaptive-average-pooling-and-how-does-it-work\n",
         "1. What is \"average pooling\"?\n",
-        "> See above.\n",
+        "> It computes the average presence of a feature.\n",
         "1. Why do we need `Flatten` after an adaptive average pooling layer?\n",
         "> The activation map has a unit dimension (1x1) after the adaptive average pooling layer. nn.Flatten() removes the unit axes.\n",
         "1. What is a \"skip connection\"?\n",
@@ -4133,7 +4156,7 @@
         "1. What does the `noop` function return?\n",
         "> The input. It is a function that does nothing.\n",
         "1. Explain what is shown in regarding the graph on the loss landscape with ResNet.\n",
-        "> This image shows a regular CNN's loss landscape compared to a ResNet's loss lanscape. The regular CNN has a signficnat number of peaks and valleys. It would be difficult for SGD to navigate this terrain to find the global minimum.  On the other hand the ResNet's loss landscape is smooth and has an easy path to find the global minimum.\n",
+        "> This image shows a regular CNN's loss landscape compared to a ResNet's loss lanscape. The regular CNN has a signficant number of peaks and valleys. It would be difficult for SGD to navigate this terrain to find the global minimum.  On the other hand the ResNet's loss landscape is smooth and has an easy path to find the global minimum.\n",
         "1. When is top-5 accuracy a better metric than top-1 accuracy?\n",
         "> Top-5 accuracy tests how often the label is in the top 5 predictions of the model. It's useful when training with mulitple different objects or objects that are easily confused with one another.\n",
         "1. What is the \"stem\" of a CNN?\n",
